<resources>
    <string name="app_name">Period</string>
    <string name="app_title">Period.</string>
    <string name="app_motto">The best period tracking app. Period.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="history">History</string>
    <string name="how_are_you_feeling_today">How are you feeling today?</string>
    <string name="mood">Mood</string>
    <string name="done">DONE</string>
</resources>
