<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="160dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/app_title"
            android:textColor="#000000"
            android:textSize="36sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/app_motto"
            android:textColor="#000000"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="360dp"
        android:layout_marginStart="65dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/email"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/email_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="240dp"
            android:background="@drawable/rounded_input"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/password"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="240dp"
            android:background="@drawable/rounded_input"
            android:inputType="textPassword"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="500dp"
        android:layout_marginStart="65dp">

        <Button
            android:id="@+id/log_in_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60dp"
            android:text="@string/log_in"
            android:fontFamily="@font/quicksand_medium"
            android:background="@drawable/rounded_button"
            android:textColor="#FFF"/>

        <Button
            android:id="@+id/sign_up_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:fontFamily="@font/quicksand_medium"
            android:background="@drawable/rounded_button"
            android:textColor="#FFF"
            android:onClick="signUpRequest"/>
    </LinearLayout>

</RelativeLayout>