<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_up_background"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_marginTop="26dp"
        android:fontFamily="@font/quicksand_medium"
        android:textSize="36dp"
        android:textColor="@color/colorPrimaryDark" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="120dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:fontFamily="@font/quicksand_medium"
            android:textSize="20dp"
            android:textColor="@color/colorPrimaryDark"/>

        <EditText
            android:id="@+id/username_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="240dp"
            android:background="@drawable/rounded_input"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:fontFamily="@font/quicksand_medium"
            android:textSize="20dp"
            android:textColor="@color/colorPrimaryDark"/>

        <EditText
            android:id="@+id/email_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="240dp"
            android:background="@drawable/rounded_input"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:fontFamily="@font/quicksand_medium"
            android:textSize="20dp"
            android:textColor="@color/colorPrimaryDark"/>

        <EditText
            android:id="@+id/password_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="240dp"
            android:background="@drawable/rounded_input"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/sign_up_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:fontFamily="@font/quicksand_medium"
        android:background="@drawable/rounded_button"
        android:layout_marginTop="320dp"
        android:textColor="#FFF"
        android:onClick="storeCredentials"/>

</RelativeLayout>